--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,24 @@
     <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
-    <script defer src="/__/firebase/9.1.3/firebase-app-compat.js"></script>
-    <script defer src="/__/firebase/9.1.3/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <script src='init.js'></script>
     <script defer src="app.js"></script>
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
+  <section id="whenSignedOut">
+
+    <button id="signInBtn" class="btn btn-primary">Sign in with Google</button>
+
+  </section>
+
+  <section id="whenSignedIn" hidden="true">
+
+    <div id="userDetails"></div>
+
+    <button id="signOutBtn" class="btn btn-primary">Sign Out</button>
+
+  </section>
   <select name="lang" id="lang" onchange='updateLang()'>
   <option value="japanese">日本語</option>
   <option value="korean">한극어</option>
