--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-auth.js"></script>
+    <!--<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-auth.js"></script>-->
     <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-firestore.js"></script>
     <script src='init.js'></script>
     <script defer src="app.js"></script>
@@ -10,11 +10,11 @@
   </head>
   <body>
     <div id='container'>
+<!--
     <section id="whenSignedOut">
-        <!--  <input type='text' placeholder='username' id='username'>
+          <input type='text' placeholder='username' id='username'>
         <input type='text' placeholder='password' id='password'>
         <button id='sign-in-up-btn'>Sign in/up</button>
-        -->
         <button id="signInBtn" class="btn btn-primary">Sign in with Google</button>
 
     </section>
@@ -26,6 +26,7 @@
         <button id="signOutBtn" class="btn btn-primary">Sign Out</button>
 
     </section>
+-->
     <div id='settings-container'>
         <!-- <input type="file" id="input-file"> -->
         <input type="radio" id='fr' onclick='radioClick(this)' name="questionType" value="freeResponse">
