--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,15 @@
     </section>
 -->
     <div id='settings-container'>
-        <!-- <input type="file" id="input-file"> -->
+        <!--<input type="file" id="input-file">-->
         <input type="radio" id='fr' onclick='radioClick(this)' name="questionType" value="freeResponse">
         <label for="fr">Free response</label><br>
         <input type="radio" id='yn' onclick='radioClick(this)' name="questionType" value="YN">
         <label for="yn">Yes/No</label><br>
-        <input type="radio" id='mc' onclick='radioClick(this)' name="questionType" value="vocab" checked>
+        <input type="radio" id='mc' onclick='radioClick(this)' name="questionType" value="vocab">
         <label for="mc">Vocab</label>
+        <input type="radio" id='sn' onclick='radioClick(this)' name="questionType" value="sentences" checked>
+        <label for="sentence">Sentences</label>
     </div>
     <select name="lang" id="lang" onchange='updateLang()'>
       <option value="korean">한극어</option>
